finished styling debugging and fade to black

--- a/etchasketch.html
+++ b/etchasketch.html
@@ -4,7 +4,7 @@
 <head>
  <meta charset="utf-8">
   <title>etch a sketch</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet"> 
 <style>
 
 :root {
@@ -18,6 +18,13 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
+}
+h1 {
+    color: black;
+    text-shadow: 17px 25px 0.7px blueviolet;
+    font-family: 'Pacifico', cursive;
+    
 }
 .reset {
     width: 120px;
@@ -50,16 +57,14 @@ body {
 
 
 <body>
+<h1>Etch a Sketch Project</h1>
+<p> Colors fade to black as you pass over them.<p/>
 <button class="reset" type="button" onclick="restart();">clear</button> 
 <div class="grid-container"> 
 
 
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
+
 <script>
 
 const  gridcont = document.querySelector(".grid-container");
@@ -75,6 +80,10 @@ function createGrid() {
     for (let i = 0; i < (sizeg * sizeg); i++) {
         var newdiv = document.createElement("div");
     newdiv.classList.add('grid-items'); 
+    newdiv.id = 'square' + i;
+    newdiv.dataset.rgb1 = "none";
+    newdiv.dataset.rgb2 = "none";
+    newdiv.dataset.rgb3 = "none";
     newdiv.onmouseout  = mousegone;
     newdiv.onmouseover = mouseon;
     gridcont.appendChild(newdiv);
@@ -91,8 +100,37 @@ function mousegone() { 
    // this.classList.remove('hovered');
 }
 function mouseon() { 
+   // this.classList.add('hovered');
+   let e = this.getAttribute('data-rgb1');
+   
+   if (e == '0') { 
+       return;
+   }
 
-    this.classList.add('hovered');
+    else if (e == 'none') { 
+        let rgb1 = randomNumber();
+        let rgb2 = randomNumber();
+        let rgb3 = randomNumber();
+        let rgbvalue = 'rgb(' + rgb1 + ',' + rgb2 + ',' + rgb3 + ')';
+        this.style.backgroundColor = rgbvalue;   
+        this.dataset.rgb1 = rgb1;
+        this.dataset.rgb2 = rgb2;
+        this.dataset.rgb3 = rgb3;
+
+   }
+   else {
+       let rgb1 = (this.dataset.rgb1 - (this.dataset.rgb1 * .15));
+       let rgb2 = (this.dataset.rgb2 - (this.dataset.rgb2 * .15));
+       let rgb3 = (this.dataset.rgb3 - (this.dataset.rgb3 * .15));
+       let rgbvalue = 'rgb(' + rgb1 + ',' + rgb2 + ',' + rgb3 + ')';
+       this.style.backgroundColor = rgbvalue;
+       this.dataset.rgb1 = rgb1;
+        this.dataset.rgb2 = rgb2;
+        this.dataset.rgb3 = rgb3;
+
+   }
+
+  
 
 }
 
@@ -111,6 +149,12 @@ function restart() {
     break; }
 }
 }
+
+function randomNumber() {
+    let randNumber = Math.floor(Math.random() * (255 - 0 + 1) ) + 0;
+    return randNumber;
+}
+
 createGrid();
 
 
